# Stability-aware-Robotic-dog

./: README.md  pyproject.toml
py_src/data_structures/: __init__.py  angles.py  points.py  std_unit_vectors.py
py_src/interpolation/: __init__.py  base.py  catmull_rom_spline.py  lagrange.py
py_src/kinematic_controller/: fk_solver.py  gait_definition.py  gait_engine.py  gaits.py  ik_solver.py  interpolator.py  main.py  output.py  state_estimator.py  stepper.py
py_src/recorder/: audio.py  record.py
py_src/visualisation/: graph_3d_interpolated_curves.py  graph_3d_kinematics.py  graph_3d_trajectory.py  graph_angle.py  lagrange_interpolator.py  main.py
